--- a/estilos.css
+++ b/estilos.css
@@ -157,11 +157,6 @@ nav ul li:hover::before {
   .contenidoppal {
     margin: 0 auto;
     width:60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-wrap: wrap;
     padding-top: 50px;
     font-family: sans-serif, Arial, Helvetica, sans-serif, roboto;
   }
@@ -182,9 +177,10 @@ nav ul li:hover::before {
   }
 
   .parrafo1 {
-    width: 50%;
+    width: 47%;
     position: relative;
     margin-top: 40px;
+    margin: 10px;
   }
 
   .seccion1 p {
@@ -198,13 +194,42 @@ nav ul li:hover::before {
     background: cover;
     background-position: 50% 50%;
     margin-top: 40px;
-    width: 50%;
+    width: 47%;
+    margin: 10px;
     height: 300px;
     position: relative;
   }
 
+  .alarmas {
+    background-color: red;
+  }
+
+  /* pie de pagina*/
+
+  footer {
+    display: flex;
+    background-color: gray;
+    width: 100%;
+    margin-top: 20px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+  }
+
+  footer a {
+    text-decoration: none;
+    color: white;
+  }
+
 
 /* menu para moviles*/
+
+@media screen and (max-width: 1600px){
+  .contenidoppal {
+    width: 80%;
+  }
+}
 
 
 
