--- a/estilos.css
+++ b/estilos.css
@@ -107,7 +107,7 @@ nav ul li:hover::before {
   
   .chatme {
     padding: 20px;
-    background: black;
+    background: #25D366;
     font-size: 20px;
     color: #fff;
     cursor: pointer;
