--- a/estilos.css
+++ b/estilos.css
@@ -117,6 +117,7 @@ nav ul li:hover::before {
     margin: 20px 20px;
     border-radius: 50%;
     z-index: 10;
+    transition: background-color 0.3s ease;
   }
 
   .chatme:hover {
